--- a/README
+++ b/README
@@ -1,2 +1,4 @@
-Simple AI text and code gen using GPT NEO - 2 not 3 
+Simple AI text and code gen using GPT NEO - 2 not 3
+
+1.3 Billion parameters
 
